调整加密工具使用apache的